Changes:     Javadoc improvements.     - Fixed yet another hanging bug under 1.4.     - Removed debugging println statements.     - We now check stdout for Javadoc errors in addition to stderr.       (JDK 1.3 uses stdout, but JDK 1.4 uses stderr).
    More FindBugs stuff.
    - Changed Boolean constructors to use static instances where convenient.


git-svn-id: file:///tmp/test-svn/trunk@1444 fe72c1cf-3628-48e9-8b72-1c46755d3cff